--- a/main.html
+++ b/main.html
@@ -4,9 +4,81 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<title>HTML Assignment 3</title>
 </head>
 
 <body>
+	<table class="middle" id="table-1">
+        <caption>HTML Assignment #3</caption>
+        <tr>
+            <td id="t11">left</td>
+            <td class ="center">center</td>
+            <td class="right">right</td>
+        </tr>
+
+        <tr>
+            <td id="t12">left</td>
+            <td class="center">center</td>
+            <td class="right">right</td>
+        </tr>
+
+        <tr>
+            <td id="t13">left</td>
+            <td class="center">center</td>
+            <td class="right">right</td>
+        </tr>
+    </table>
+
+    <table class="tab2" id="table-2">
+		<tr>
+			<td colspan=6 id="t21"></td>
+		
+		</tr>
+		<tr>
+			<td rowspan=4 id="t21" ></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td id="t21" ></td>
+			<td rowspan=2 colspan=3></td>
+			<td></td>
+
+		</tr>
+		<tr>
+			<td id="t21" ></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td id="t21" ></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td colspan=6 id="t21" ></td>
+		
+		</tr>
+	</table>
+	<table id= "table-3" class="tab3">
+		<tr>
+			<td colspan="6"></td>
+		</tr>
+		<tr>
+			<td class="b"></td>
+			<td class="b"></td>
+			<td class="b"></td>
+		</tr>
+		<tr>
+			<td colspan="6"></td>
+		</tr>
+		
+	</table>
+
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
