--- a/main.html
+++ b/main.html
@@ -66,15 +66,15 @@
 	</table>
 	<table id= "table-3" class="tab3">
 		<tr>
-			<td colspan="6"></td>
+			<td colspan="6" class="d"></td>
 		</tr>
 		<tr>
 			<td class="b"></td>
-			<td class="b"></td>
+			<td class="g"><img src="https://www2.d125.org/applied_arts/teched/courses/WEB/portfolios/2013_FallP3/Luthra%20Portfolio/images-1.jpeg"></td>
 			<td class="b"></td>
 		</tr>
 		<tr>
-			<td colspan="6"></td>
+			<td colspan="6" class="c"></td>
 		</tr>
 		
 	</table>
