--- a/main.html
+++ b/main.html
@@ -29,7 +29,7 @@
         </tr>
     </table>
 
-    <table class="tab2" id="table-2">
+    <table class="middle" id="table-2">
 		<tr>
 			<td colspan=6 id="t21"></td>
 		
@@ -64,13 +64,13 @@
 		
 		</tr>
 	</table>
-	<table id= "table-3" class="tab3">
+	<table id= "table-3" class="middle">
 		<tr>
 			<td colspan="6" class="d"></td>
 		</tr>
 		<tr>
 			<td class="b"></td>
-			<td class="g"><img src="https://www2.d125.org/applied_arts/teched/courses/WEB/portfolios/2013_FallP3/Luthra%20Portfolio/images-1.jpeg"></td>
+			<td class="g"><img id="t-image" src="https://www2.d125.org/applied_arts/teched/courses/WEB/portfolios/2013_FallP3/Luthra%20Portfolio/images-1.jpeg"></td>
 			<td class="b"></td>
 		</tr>
 		<tr>
