--- a/main.html
+++ b/main.html
@@ -10,6 +10,7 @@
 <body>
 	<table class="middle" id="table-1">
         <caption>HTML Assignment #3</caption>
+		
         <tr>
             <td id="t11">left</td>
             <td class ="center">center</td>
@@ -17,7 +18,7 @@
         </tr>
 
         <tr>
-            <td id="t12">left</td>
+            <td id="td#t12">left</td>
             <td class="center">center</td>
             <td class="right">right</td>
         </tr>
@@ -29,7 +30,7 @@
         </tr>
     </table>
 
-    <table class="middle" id="table-2">
+    <table class="middle" id="table#table-2.tab2">
 		<tr>
 			<td colspan=6 id="t21"></td>
 		
@@ -64,13 +65,13 @@
 		
 		</tr>
 	</table>
-	<table id= "table-3" class="middle">
+	<table id= "table#table-3.tab3" class="middle">
 		<tr>
 			<td colspan="6" class="d"></td>
 		</tr>
 		<tr>
 			<td class="b"></td>
-			<td class="g"><img id="t-image" src="https://www2.d125.org/applied_arts/teched/courses/WEB/portfolios/2013_FallP3/Luthra%20Portfolio/images-1.jpeg"></td>
+			<td class="g"><img id="#t-image img" src="https://www2.d125.org/applied_arts/teched/courses/WEB/portfolios/2013_FallP3/Luthra%20Portfolio/images-1.jpeg"></td>
 			<td class="b"></td>
 		</tr>
 		<tr>
