--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-	<table class="middle" id="table-1">
+	<table id="table-1" class="middle">
         <caption>HTML Assignment #3</caption>
 		
         <tr>
@@ -30,7 +30,7 @@
         </tr>
     </table>
 
-    <table class="middle" id="table#table-2.tab2">
+    <table id="table-2" class="middle">
 		<tr>
 			<td colspan=6 id="t21"></td>
 		
@@ -65,7 +65,7 @@
 		
 		</tr>
 	</table>
-	<table id= "table#table-3.tab3" class="middle">
+	<table id= "table-3" class="middle">
 		<tr>
 			<td colspan="6" class="d"></td>
 		</tr>
