--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-	<table id="table-1" class="middle">
+	<table id="table-1" class="middle tab1">
         <caption>HTML Assignment #3</caption>
 		
         <tr>
@@ -30,7 +30,7 @@
         </tr>
     </table>
 
-    <table id="table-2" class="middle">
+    <table id="table-2" class="middle tab2">
 		<tr>
 			<td colspan=6 id="t21"></td>
 		
@@ -65,7 +65,7 @@
 		
 		</tr>
 	</table>
-	<table id= "table-3" class="middle">
+	<table id= "table-3" class="middle tab3">
 		<tr>
 			<td colspan="6" class="d"></td>
 		</tr>
