--- a/main.html
+++ b/main.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html>
 
 <head>
@@ -13,12 +12,12 @@
 		
         <tr>
             <td id="t11">left</td>
-            <td class ="center">center</td>
+            <td class="center">center</td>
             <td class="right">right</td>
         </tr>
 
         <tr>
-            <td id="td#t12">left</td>
+            <td id="t12">left</td>
             <td class="center">center</td>
             <td class="right">right</td>
         </tr>
@@ -32,58 +31,53 @@
 
     <table id="table-2" class="middle tab2">
 		<tr>
-			<td colspan=6 id="t21"></td>
-		
+			<td colspan="6" id="t21-rowspan1"></td>
 		</tr>
 		<tr>
-			<td rowspan=4 id="t21" ></td>
+			<td rowspan="4" id="t21-rowspan2"></td>
 			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-			<td></td>
-		</tr>
-		<tr>
-			<td id="t21" ></td>
-			<td rowspan=2 colspan=3></td>
-			<td></td>
-
-		</tr>
-		<tr>
-			<td id="t21" ></td>
-			<td></td>
-		</tr>
-		<tr>
-			<td id="t21" ></td>
 			<td></td>
 			<td></td>
 			<td></td>
 			<td></td>
 		</tr>
 		<tr>
-			<td colspan=6 id="t21" ></td>
-		
+			<td id="t21-rowspan3"></td>
+			<td rowspan="2" colspan="3"></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td id="t21-rowspan4"></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td id="t21-rowspan5"></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td colspan="6" id="t21-rowspan6"></td>
 		</tr>
 	</table>
-	<table id= "table-3" class="middle tab3">
+	
+	<table id="table-3" class="middle tab3">
 		<tr>
 			<td colspan="6" class="d"></td>
 		</tr>
 		<tr>
 			<td class="b"></td>
-			<td class="g"><img id="#t-image img" src="https://www2.d125.org/applied_arts/teched/courses/WEB/portfolios/2013_FallP3/Luthra%20Portfolio/images-1.jpeg"></td>
+			<td class="g"><img id="t-image" src="https://www2.d125.org/applied_arts/teched/courses/WEB/portfolios/2013_FallP3/Luthra%20Portfolio/images-1.jpeg" alt="Description"></td>
 			<td class="b"></td>
 		</tr>
 		<tr>
 			<td colspan="6" class="c"></td>
 		</tr>
-		
 	</table>
 
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+    <script type="text/javascript" src="./script.js"></script>
 
 </body>
-
 </html>
