--- a/main.html
+++ b/main.html
@@ -18,7 +18,7 @@
 
         <tr>
             <td id="t12">left</td>
-            <td class="center">center</td>
+            <td class="t12-center">center</td>
             <td class="right">right</td>
         </tr>
 
