--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 		
         <tr>
             <td id="t11">left</td>
-            <td class="center">center</td>
+            <td class="t12-center">center</td>
             <td class="right">right</td>
         </tr>
 
@@ -24,7 +24,7 @@
 
         <tr>
             <td id="t13">left</td>
-            <td class="center">center</td>
+            <td class="t12-center">center</td>
             <td class="right">right</td>
         </tr>
     </table>
