--- a/main.html
+++ b/main.html
@@ -12,19 +12,19 @@
 		
         <tr>
             <td id="t11">left</td>
-            <td class="t12-center">center</td>
+            <td class="t12-classcenter">center</td>
             <td class="right">right</td>
         </tr>
 
         <tr>
             <td id="t12">left</td>
-            <td class="t12-center">center</td>
+            <td class="t12-classcenter">center</td>
             <td class="right">right</td>
         </tr>
 
         <tr>
             <td id="t13">left</td>
-            <td class="t12-center">center</td>
+            <td class="t12-classcenter">center</td>
             <td class="right">right</td>
         </tr>
     </table>
