--- a/main.html
+++ b/main.html
@@ -31,10 +31,10 @@
 
     <table id="table-2" class="middle tab2">
 		<tr>
-			<td colspan="6" id="t21-rowspan1"></td>
+			<td colspan="6" id="t21-row1"></td>
 		</tr>
 		<tr>
-			<td rowspan="4" id="t21-rowspan2"></td>
+			<td rowspan="4" id="t21-row2"></td>
 			<td></td>
 			<td></td>
 			<td></td>
@@ -42,23 +42,23 @@
 			<td></td>
 		</tr>
 		<tr>
-			<td id="t21-rowspan3"></td>
+			<td id="t21-row3"></td>
 			<td rowspan="2" colspan="3"></td>
 			<td></td>
 		</tr>
 		<tr>
-			<td id="t21-rowspan4"></td>
+			<td id="t21-row4"></td>
 			<td></td>
 		</tr>
 		<tr>
-			<td id="t21-rowspan5"></td>
+			<td id="t21-row5"></td>
 			<td></td>
 			<td></td>
 			<td></td>
 			<td></td>
 		</tr>
 		<tr>
-			<td colspan="6" id="t21-rowspan6"></td>
+			<td colspan="6" id="t21-row6"></td>
 		</tr>
 	</table>
 	
