--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
         </tr>
 
         <tr>
-            <td id="t12" class="t12-center">left</td>
+            <td id="t12" class="center">left</td>
             <td class="center">center</td>
             <td class="right">right</td>
         </tr>
