--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
         <caption>HTML Assignment #3</caption>
 		
         <tr>
-            <td id="t11">left</td>
+            <td id="t11" class="left">left</td>
             <td class="center">center</td>
             <td class="right">right</td>
         </tr>
@@ -23,7 +23,7 @@
         </tr>
 
         <tr>
-            <td id="t13">left</td>
+            <td id="t13" class="right">left</td>
             <td class="center">center</td>
             <td class="right">right</td>
         </tr>
