--- a/main.html
+++ b/main.html
@@ -31,10 +31,10 @@
 
     <table id="table-2" class="middle tab2">
 		<tr>
-			<td colspan="6" id="t21-row1"></td>
+			<td id="t21-row1" colspan="6"></td>
 		</tr>
 		<tr>
-			<td rowspan="4" id="t21-row2"></td>
+			<td id="t21-row2" rowspan="4"></td>
 			<td></td>
 			<td></td>
 			<td></td>
