--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-	<table id="table-1" class="middle-tab1">
+	<table id="table-1" class="middle tab1">
         <caption>HTML Assignment #3</caption>
 		
         <tr>
@@ -29,7 +29,7 @@
         </tr>
     </table>
 
-    <table id="table-2" class="middle-tab2">
+    <table id="table-2" class="middle tab2">
 		<tr>
 			<td id="t21-row1" colspan="6"></td>
 		</tr>
@@ -62,7 +62,7 @@
 		</tr>
 	</table>
 	
-	<table id="table-3" class="middle-tab3">
+	<table id="table-3" class="middle tab3">
 		<tr>
 			<td colspan="6" class="d"></td>
 		</tr>
