--- a/main.html
+++ b/main.html
@@ -31,10 +31,10 @@
 
     <table id="table-2" class="middle tab2">
 		<tr>
-			<td id="t21-row1" colspan="6"></td>
+			<td id="t21 row1" colspan="6"></td>
 		</tr>
 		<tr>
-			<td id="t21-row2" rowspan="4"></td>
+			<td id="t21 row2" rowspan="4"></td>
 			<td></td>
 			<td></td>
 			<td></td>
@@ -42,7 +42,7 @@
 			<td></td>
 		</tr>
 		<tr>
-			<td id="t21-row3"></td>
+			<td id="t21 row3"></td>
 			<td rowspan="2" colspan="3"></td>
 			<td></td>
 		</tr>
@@ -58,7 +58,7 @@
 			<td></td>
 		</tr>
 		<tr>
-			<td colspan="6" id="t21-row6"></td>
+			<td colspan="6" id="t21 row6"></td>
 		</tr>
 	</table>
 	
